<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BullsEye1</string>
    <string name="agree">Agree</string>
    <string name="hello_world">Hello World!!!</string>
    <string name="action_settings">Settings</string>
    <string name="Term_Cond">Terms and Conditions</string>
    <string name="title_activity_register_phone_no">RegisterPhoneNo</string>
    <string name="title_activity_web_login">WebLogin</string>
    <string name="verify_phone_no">Verify Phone Number</string>
    <string name="select_country">Select Country</string>
    <string name="enter_phone_no">Enter Phone Number</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="next_act_reg_phone">Next</string>
    <string name="profileHeader">Profile</string>
    <string name="moodInfo">I am Feeling Lucky!!!</string>
    <string name="personName">Enter your name</string>
    <string name="next_act_pro_info">Next</string>
    <string name="title_activity_profile_info">ProfileInfo</string>

</resources>
