<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xzbkcc.bullseye1.RegisterPhoneNo">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone_no"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCountry"
        android:layout_above="@+id/phoneNumber"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignStart="@+id/phoneNumber"
        android:layout_alignRight="@+id/phoneNumber"
        android:layout_alignEnd="@+id/phoneNumber" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumber"
        android:text="@string/enter_phone_no"
        android:layout_above="@+id/buttonNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_act_reg_phone"
        android:id="@+id/buttonNext"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />


</RelativeLayout>
